<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="207dp"
        android:layout_height="174dp"
        android:src="@drawable/logoo"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_authentication_name"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_authentication_email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_authentication_password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_authentication_register_question"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/hyperlink_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_authentication_login_with_underline"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/MasukButton"
        android:layout_width="296dp"
        android:layout_height="52dp"
        android:layout_below="@id/linearLayoutLoginFragment"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blue"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>