<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.CreateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@android:color/white">

        <!-- Tombol Cancel -->
        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:padding="16dp" />

        <!-- Tombol Post -->
        <TextView
            android:id="@+id/post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:padding="16dp"/>

        <!-- Gambar Profil dan Teks -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/cancel_button"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/profile_image_description" />

        </LinearLayout>

        <!-- EditText untuk input teks -->
        <EditText
            android:id="@+id/status_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_button"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:background="@null"
            android:padding="8dp"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="1"
            android:gravity="top"
            android:hint="@string/what_happening"
            android:contentDescription="@string/what_happening"
            android:autofillHints="autofill_hint_post_content" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
